<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_filter"
        android:paddingRight="@dimen/padding_filter">

    <TextView
        android:id="@+id/filter_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_by_time"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:drawableLeft="@drawable/ic_ichorario"
        android:textSize="@dimen/font_huge"
        android:paddingTop="@dimen/padding_top_filter"
        android:drawablePadding="@dimen/padding_drawable_filter"
        android:paddingBottom="@dimen/padding_top_filter"/>

    <RelativeLayout
        android:id="@+id/filter_time_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filter_time_title">
        <LinearLayout
            android:id="@+id/morning_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_filter">
            <CheckBox
                android:id="@+id/morning_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/topaz"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/morning"
                android:paddingRight="@dimen/icon_padding2"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/morning_timeslot"/>
            <TextView
                android:id="@+id/morning_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/afternoon_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_filter"
            android:layout_below="@+id/morning_layout">
            <CheckBox
                android:id="@+id/afternoon_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/topaz"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/afternoon"
                android:paddingRight="@dimen/icon_padding2"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/afternoon_timeslot"/>
            <TextView
                android:id="@+id/afternoon_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/evening_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_filter"
            android:layout_below="@+id/afternoon_layout">
            <CheckBox
                android:id="@+id/evening_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/topaz"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evening"
                android:paddingRight="@dimen/icon_padding2"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evening_timeslot"/>
            <TextView
                android:id="@+id/evening_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/late_night_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_filter"
            android:layout_below="@+id/evening_layout">
            <CheckBox
                android:id="@+id/late_night_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/topaz"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/late_night"
                android:paddingRight="@dimen/icon_padding2"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/late_night_timeslot"/>
            <TextView
                android:id="@+id/late_night_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>
        </LinearLayout>
    </RelativeLayout>

        <View
            android:id="@+id/horizontal_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/one_dp"
            android:background="#c0c0c0"
            android:layout_toRightOf="@+id/time_departure"
            android:layout_below="@+id/filter_time_layout"
            android:layout_marginTop="@dimen/tab_padding_bottom"
            android:layout_marginLeft="@dimen/two_dp"
            android:layout_marginRight="@dimen/two_dp"/>

        <TextView
            android:id="@+id/filter_stops_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_by_stops"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_icparadas"
            android:textSize="@dimen/font_huge"
            android:paddingTop="@dimen/padding_top_filter"
            android:drawablePadding="@dimen/padding_drawable_filter"
            android:paddingBottom="@dimen/padding_top_filter"
            android:layout_below="@+id/horizontal_line"/>

        <RelativeLayout
            android:id="@+id/filter_stops_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/filter_stops_title"
            android:paddingBottom="@dimen/padding_top_filter">
            <LinearLayout
                android:id="@+id/straight_flight_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_filter">
                <CheckBox
                    android:id="@+id/straight_flight_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/topaz"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/straight_flight"
                    android:paddingRight="@dimen/icon_padding2"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/straight_flight_qty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/one_stop_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_filter"
                android:layout_below="@+id/straight_flight_layout">
                <CheckBox
                    android:id="@+id/one_stop_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/topaz"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one_stop_flight"
                    android:paddingRight="@dimen/icon_padding2"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/one_stop_qty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""/>
            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/apply_filter_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/topaz"
            android:textColor="@color/textColorPrimary"
            android:text="@string/apply_filter"
            android:layout_below="@+id/filter_stops_layout"
            android:textAllCaps="false"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>