<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:src="@drawable/ic_left_arrow"
            android:scaleX="0.80"
            android:scaleY="0.80"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sorting"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title"
            android:textColor="@color/textColorPrimary"
            android:textStyle="bold"
            android:textSize="@dimen/font_large"/>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_filter"
        android:paddingRight="@dimen/padding_filter"
        android:paddingTop="@dimen/vertical_line_height">

        <TextView
            android:id="@+id/sort_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_icordenar"
            android:textSize="@dimen/font_huge"
            android:paddingTop="@dimen/padding_top_filter"
            android:drawablePadding="@dimen/padding_drawable_filter"
            android:paddingBottom="@dimen/padding_top_filter"
            android:layout_below="@+id/horizontal_line"/>

        <RelativeLayout
            android:id="@+id/sort_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sort_title"
            android:paddingBottom="@dimen/padding_top_filter"
            android:paddingLeft="@dimen/padding_filter">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/myRadioGroup"
                android:checkedButton="@+id/sound" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sound"
                    android:text="@string/greatest_price"
                    android:buttonTint="@color/topaz"
                    android:textColor="@color/text_color_dark"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/vibration"
                    android:text="@string/cheapest_price"
                    android:buttonTint="@color/topaz"
                    android:textColor="@color/text_color_dark"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/silent"
                    android:text="@string/cheapest_price_shortest_duration"
                    android:buttonTint="@color/topaz"
                    android:textColor="@color/text_color_dark"/>

            </RadioGroup>

        </RelativeLayout>

        <Button
            android:id="@+id/apply_sorting_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/topaz"
            android:textColor="@color/textColorPrimary"
            android:text="@string/apply_sorting"
            android:layout_below="@+id/sort_layout"
            android:textAllCaps="false"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>